--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <div>
                 <h2 class="px-4" style="border-left: 4px solid #cf404e;">What I do</h2>
                 <p class="about-me-text">
-                    I have over 1 and half years experience building web applications and websites. Below is my main
+                    I have hands on experience building web applications and websites. Below is my main
                     technical Skill
                     sets and technologies I use
                 </p>
