Made the contact form active and work with formsubmit

--- a/contact.html
+++ b/contact.html
@@ -109,22 +109,22 @@
 
                 <div class="pt-5 mt-5">
                     <h3 class="heading text-center p-2">Get in Touch</h3>
-                    <form action="">
+                    <form action="https://formsubmit.co/thapelomalet066@gmail.com" method="post">
                         <div class="row w-75 m-auto">
                             <div class="col-6 py-2">
-                                <input type="text" name="name" placeholder="Name" class="form-control" readonly>
+                                <input type="text" name="name" placeholder="Name" class="form-control">
                             </div>
                             <div class="col-6 py-2">
-                                <input type="email" name="Email" placeholder="Email" class="form-control" readonly>
+                                <input type="email" name="Email" placeholder="Email" class="form-control">
                             </div>
                             <div class="py-2">
-                                <input type="text" name="phone" placeholder="Phone" class="form-control" readonly>
+                                <input type="text" name="phone" placeholder="Phone" class="form-control">
                             </div>
                             <div class="py-2">
-                                <textarea name="message" placeholder="Message" id="message"  rows="10" class="form-control" readonly></textarea>
+                                <textarea name="message" placeholder="Message" id="message"  rows="10" class="form-control"></textarea>
                             </div>
                             <div class="py-2 ">
-                                <button class="btn bg-color text-white px-5" type="submit" disabled>Send</button>
+                                <button class="btn bg-color text-white px-5" type="submit">Send</button>
                             </div>
                         </div>
                     </form>
